@@ -5,49 +5,43 @@
 
 using namespace irr;
 using namespace core;
-using namespace scene;
-using namespace video;
-using namespace io;
-using namespace gui;
 
+namespace
+{
 // Tests MD2 animations.
 /** At the moment, this just verifies that the last frame of the animation produces the expected bitmap. */
-bool md2Animation(void)
+bool testLastFrame()
 {
 	// Use EDT_BURNINGSVIDEO since it is not dependent on (e.g.) OpenGL driver versions.
-	IrrlichtDevice *device = createDevice( EDT_BURNINGSVIDEO, dimension2d<u32>(160, 120), 32);
-	assert(device);
+	IrrlichtDevice *device = createDevice(video::EDT_BURNINGSVIDEO, dimension2d<u32>(160, 120), 32);
 	if (!device)
 		return false;
 
-	IVideoDriver* driver = device->getVideoDriver();
-	ISceneManager * smgr = device->getSceneManager();
+	video::IVideoDriver* driver = device->getVideoDriver();
+	scene::ISceneManager * smgr = device->getSceneManager();
 
-	IAnimatedMesh* mesh = smgr->getMesh("../media/sydney.md2");
-	IAnimatedMeshSceneNode* node;
-	assert(mesh);
+	scene::IAnimatedMesh* mesh = smgr->getMesh("../media/sydney.md2");
 
 	bool result = (mesh != 0);
-	if(mesh)
+	if (mesh)
 	{
-		node = smgr->addAnimatedMeshSceneNode(mesh);
-		assert(node);
+		scene::IAnimatedMeshSceneNode* node = smgr->addAnimatedMeshSceneNode(mesh);
 
-		if(node)
+		if (node)
 		{
 			node->setPosition(vector3df(20, 0, 30));
-			node->setMaterialFlag(EMF_LIGHTING, false);
+			node->setMaterialFlag(video::EMF_LIGHTING, false);
 			node->setMaterialTexture(0, driver->getTexture("../media/sydney.bmp"));
 			node->setLoopMode(false);
 
 			(void)smgr->addCameraSceneNode();
 
 			// Just jump to the last frame since that's all we're interested in.
-			node->setMD2Animation(EMAT_DEATH_FALLBACK);
+			node->setMD2Animation(scene::EMAT_DEATH_FALLBACK);
 			node->setCurrentFrame((f32)(node->getEndFrame()));
 			node->setAnimationSpeed(0);
 			device->run();
-			driver->beginScene(true, true, SColor(255, 255, 255, 0));
+			driver->beginScene(true, true, video::SColor(255, 255, 255, 0));
 			smgr->drawAll();
 			driver->endScene();
 			if (mesh->getBoundingBox() != mesh->getMesh(node->getEndFrame())->getBoundingBox())
@@ -79,3 +73,56 @@ bool md2Animation(void)
 	return result;
 }
 
+// Tests MD2 normals.
+bool testNormals()
+{
+	// Use EDT_BURNINGSVIDEO since it is not dependent on (e.g.) OpenGL driver versions.
+	IrrlichtDevice *device = createDevice(video::EDT_BURNINGSVIDEO, dimension2d<u32>(160, 120), 32);
+	if (!device)
+		return false;
+
+	video::IVideoDriver* driver = device->getVideoDriver();
+	scene::ISceneManager * smgr = device->getSceneManager();
+
+	scene::IAnimatedMesh* mesh = smgr->getMesh("../media/sydney.md2");
+
+	bool result = (mesh != 0);
+	if (mesh)
+	{
+		scene::IAnimatedMeshSceneNode* node = smgr->addAnimatedMeshSceneNode(mesh);
+		if (node)
+		{
+			node->setPosition(vector3df(20, 0, 30));
+			node->setMaterialFlag(video::EMF_LIGHTING, false);
+			node->setDebugDataVisible(scene::EDS_NORMALS);
+			node->setMaterialTexture(0, driver->getTexture("../media/sydney.bmp"));
+			node->setLoopMode(false);
+
+			(void)smgr->addCameraSceneNode();
+
+			node->setMD2Animation(scene::EMAT_STAND);
+			node->setAnimationSpeed(0);
+			device->run();
+			driver->beginScene(true, true, video::SColor(255, 255, 255, 0));
+			smgr->drawAll();
+			driver->endScene();
+		}
+	}
+
+	result &= takeScreenshotAndCompareAgainstReference(driver, "-md2Normals.png");
+	device->closeDevice();
+	device->run();
+	device->drop();
+
+	return result;
+}
+
+}
+
+// test md2 features
+bool md2Animation(void)
+{
+	bool result = testLastFrame();
+	result &= testNormals();
+	return result;
+}
